# marauder

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bindings.json  deno.json
apps/marauder/: index.html  package-lock.json  package.json
apps/marauder-server/: Cargo.toml
apps/marauder-server/src/: main.rs
apps/marauder/src/: bootstrap.js  ipc.ts  main.ts  styles.css  types.ts
apps/marauder/src-tauri/: Cargo.toml  tauri.conf.json
apps/marauder/src-tauri/src/: event_bridge.rs  ipc_bridge.rs  lib.rs  main.rs
apps/marauder/src/components/: command-palette.ts  extension-panel.ts  search-bar.ts  status-bar.ts  tab-bar.ts
docs/: Architecture.md  Development.md  Extensions.md  Overview.md  Release.md  Roadmap.md
docs/plans/: p3-cards-102-108-2026-03-06.md
docs/specs/: SPEC-1-future-platform-features.md
extensions/ai/: agent.ts  chat.ts  context.ts  errors.ts  extension.json  llm_client.ts  mod.ts  suggestions.ts
extensions/git-integration/: deno.json  extension.json  mod.ts
extensions/notifications/: deno.json  extension.json  mod.ts
extensions/search/: deno.json  extension.json  mod.ts
extensions/status-bar/: deno.json  extension.json  mod.ts
extensions/theme-default/: deno.json  extension.json  mod.ts
ffi/: _lib.ts
ffi/compute/: deno.json  mod.ts
ffi/config-store/: deno.json  mod.ts
ffi/event-bus/: deno.json  mod.ts
ffi/grid/: deno.json  mod.ts
ffi/parser/: deno.json  mod.ts
ffi/pty/: deno.json  integration_test.ts  mod.ts
ffi/renderer/: deno.json  mod.ts
lib/cli/: ext.ts  ext_test.ts
lib/cli/templates/extension-template/: README.md  extension.json  mod.ts
lib/config/: defaults.ts  mod.ts  schema.ts  ts-loader.ts
lib/dev/: deno.json  mod.ts
lib/extensions/: bridge.ts  commands.ts  context.ts  deno.json  installer.ts  installer_test.ts  isolation.ts  keybindings.ts  loader.ts  loader_test.ts  mod.ts  panels.ts  registry.ts  types.ts  watcher.ts
lib/io/: deno.json  mod.ts  pipeline.ts  pipeline_test.ts  vt-keymap.ts  vt.ts
lib/shell/: completions.ts  completions_test.ts  deno.json  history.ts  history_test.ts  inject.ts  inject_test.ts  mod.ts  prompt.ts  prompt_test.ts  zones.ts
lib/ui/: deno.json  frame.ts  layout.ts  mod.ts  session.ts  url-handler.ts
lib/ui/styling/: accessibility.ts  color-scheme.ts  font.ts  mod.ts  options.ts  style-config.ts
lib/ui/user/: config.ts  config_test.ts  handler.ts  mod.ts  parser.ts
pkg/compute/: Cargo.toml
pkg/compute/src/: bindgen.rs  engine.rs  ffi.rs  lib.rs  types.rs
pkg/config-store/: Cargo.toml
pkg/config-store/src/: bindgen.rs  commands.rs  defaults.rs  ffi.rs  layer.rs  lib.rs  ops.rs  store.rs  watcher.rs
pkg/daemon/: Cargo.toml
pkg/daemon/src/: daemon.rs  error.rs  ffi.rs  lib.rs  session.rs
pkg/event-bus/: Cargo.toml
pkg/event-bus/src/: bindgen.rs  bus.rs  events.rs  ffi.rs  handle_registry.rs  interceptor.rs  lib.rs  ops.rs  sync_util.rs
pkg/grid/: Cargo.toml
pkg/grid/src/: bindgen.rs  cell.rs  commands.rs  ffi.rs  grid.rs  lib.rs  ops.rs  screen.rs
pkg/ipc/: Cargo.toml
pkg/ipc/src/: client.rs  error.rs  framing.rs  lib.rs  message.rs  server.rs
pkg/parser/: Cargo.toml
pkg/parser/src/: actions.rs  bindgen.rs  ffi.rs  lib.rs  ops.rs  performer.rs
pkg/pty/: Cargo.toml
pkg/pty/src/: bindgen.rs  commands.rs  ffi.rs  lib.rs  manager.rs  ops.rs  pty.rs  reader.rs
pkg/renderer/: Cargo.toml
pkg/renderer/src/: atlas.rs  ffi.rs  lib.rs  pipelines.rs  renderer.rs  types.rs
pkg/runtime/: Cargo.toml
pkg/runtime/src/: bindgen.rs  commands.rs  config.rs  error.rs  ffi.rs  hooks.rs  lib.rs  lifecycle.rs  ops.rs  pipeline.rs  util.rs
resources/fonts/: README.md
resources/shaders/: background.wgsl  cursor.wgsl  gpu_cell.wgsl  highlight.wgsl  search.wgsl  selection.wgsl  selection_extract.wgsl  text.wgsl  url_detect.wgsl
resources/shell-integrations/: marauder.bash  marauder.fish  marauder.zsh
