[workspace]
resolver = "2"
members = [
  "apps/marauder/src-tauri",
  "pkg/event-bus",
  "pkg/pty",
  "pkg/parser",
  "pkg/grid",
  "pkg/renderer",
  "pkg/compute",
  "pkg/runtime",
  "pkg/config-store",
  "pkg/ipc",
  "pkg/daemon",
]

[workspace.dependencies]
portable-pty = "0.9"
vte = "0.15"
wgpu = "24.0"
cosmic-text = "0.12"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
deno_core = "0.381"
deno_error = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
notify = "7"
raw-window-handle = "0.6"
bitflags = "2"
deno_bindgen = "0.8"
unicode-width = "0.2"
