[package]
name = "marauder-compute"
version = "0.1.0"
edition = "2021"

[lib]
name = "marauder_compute"
crate-type = ["rlib", "cdylib"]

[dependencies]
wgpu = { workspace = true }
marauder-event-bus = { path = "../event-bus" }
marauder-grid = { path = "../grid" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
deno_bindgen = { workspace = true }
