[package]
name = "marauder-config-store"
version = "0.1.0"
edition = "2021"

[lib]
name = "marauder_config_store"
crate-type = ["rlib", "cdylib"]

[dependencies]
marauder-event-bus = { path = "../event-bus" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
deno_bindgen = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
tauri = { workspace = true, optional = true }
dirs = "5"

[features]
default = []
tauri-commands = ["dep:tauri"]

[dev-dependencies]
tempfile = "3"
