[package]
name = "marauder-daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "marauder_daemon"
crate-type = ["rlib", "cdylib"]

[dependencies]
marauder-event-bus = { path = "../event-bus" }
marauder-ipc = { path = "../ipc" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
