[package]
name = "marauder-pty"
version = "0.1.0"
edition = "2021"

[lib]
name = "marauder_pty"
crate-type = ["rlib", "cdylib"]

[dependencies]
portable-pty = { workspace = true }
marauder-event-bus = { path = "../event-bus" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
