[package]
name = "marauder-renderer"
version = "0.1.0"
edition = "2021"

[lib]
name = "marauder_renderer"
crate-type = ["rlib", "cdylib"]

[dependencies]
wgpu = { workspace = true }
cosmic-text = { workspace = true }
marauder-event-bus = { path = "../event-bus" }
marauder-grid = { path = "../grid" }
raw-window-handle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
